# stellar-private-payments

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-and-test.yml  contracts-build.yml  deployment.yml  linter.yml  test-ignored.yml  wasm-build.yml
app/: ARCHITECTURE.md
app/crates/core/audit/: Cargo.toml
app/crates/core/audit/src/: babyjub.rs  disclosure.rs  enc.rs  lib.rs  reconstruct.rs  record.rs  wiring.rs
app/crates/core/stellar/: Cargo.toml
app/crates/core/stellar/src/: contract_state.rs  conversions.rs  ext_data_hash.rs  lib.rs  rpc.rs  soroban_encode.rs  tx_assemble.rs  tx_prepare.rs
app/crates/core/tx-planner/: Cargo.toml  README.md
app/crates/core/tx-planner/src/: lib.rs
app/crates/core/tx-planner/src/plan/: combination.rs  error.rs  mod.rs
app/js/: stellar.js
app/js/ui/: navigation.js  transactions.js
app/lumenveil-ui/: next.config.ts  package-lock.json  package.json
app/lumenveil-ui/data/: disclosures.json  feed.json
app/lumenveil-ui/src/app/: globals.css  layout.tsx  page.tsx
app/lumenveil-ui/src/app/api/disclosures/: route.ts
app/lumenveil-ui/src/app/api/reconstruct/: route.ts
app/lumenveil-ui/src/components/: Aurora.tsx  Nav.tsx
app/lumenveil-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx
app/lumenveil-ui/src/lib/: api.ts  constants.ts  utils.ts
app/lumenveil-ui/src/lib/server/: audit.ts  snapshot.ts
app/lumenveil-ui/src/sections/: AuditorConsole.tsx  Footer.tsx  Gap.tsx  Hero.tsx  OnChain.tsx  Pipeline.tsx
auditor/: .gitignore  disclose.mjs  disclose.test.mjs  package.json  scan.mjs  scan.test.mjs
circuit-keys/src/: lib.rs
circuits/: build.rs
circuits/src/: selectiveDisclosureAudit.circom  selectiveDisclosureAudit.circom.draft
circuits/src/test/: mod.rs  prove_selective_disclosure_audit.rs
contracts/pool/src/: pool.rs  test.rs
contracts/public-key-registry/src/: lib.rs  test.rs
deployments/scripts/: deploy.sh
deployments/testnet/: deployments.json
deployments/testnet/circuit_keys/: selectiveDisclosureAudit_vk.json
e2e-tests/: Cargo.toml
e2e-tests/src/tests/: e2e_auditor_disclosure.rs  e2e_pool_2_in_2_out.rs  e2e_pool_2tx_plan.rs  mod.rs  utils.rs
